Updated to use as bachelor or master ISEL template form

--- a/personaldataofthesis.tex
+++ b/personaldataofthesis.tex
@@ -1,13 +1,19 @@
 %% Title of thesis
 \title{[Título da dissertação, do Projecto ou do Relatório de Estágio]}
 
-%% Author
+%% Author(s) 
 % gender: f for women or m for men and name
-\author[f]{\uppercase{[Nome completo do primeiro autor]}}
-\author[f]{\uppercase{[Nome completo do segundo autor]}}
+%  ------ Master report  (maximum of 1) ---------
+\author[f]{\uppercase{[Nome completo do  autor]}}
+\authordegree{(Grau do candidato)} 
 
+%  ------ Bachelor report  (maximum of 3) ---------
+%\author[f]{\uppercase{[Nome completo do primeiro autor]}}
+%\author[f]{\uppercase{[Nome completo do segundo autor]}}
+%\author[f]{\uppercase{[Nome completo do terceiro autor]}}
 %% remove text inside { } for report document
-\authordegree{} % (Grau do candidato)
+%\authordegree{} 
+
 
 %% Date
 \themonth{MÊS}
