Changes in README.md file and some other documents such as abstract, resumo and chapter1

--- a/template.tex
+++ b/template.tex
@@ -97,7 +97,7 @@
 
 % Where to find code scripts files
 \newcommand{\codefiles}[1]{Chapters/scripts/#1}
-% syntax: \lstinputlisting[]{\rfile{name.r}}
+% syntax: \lstinputlisting[]{\codefiles{name.r}}
 
 % Where to find Chapters files
 \newcommand{\chapterfiles}[1]{Chapters/#1}
