--- a/template.tex
+++ b/template.tex
@@ -9,7 +9,7 @@
 %% Version 20170102 (Jan 2017) v2.1
 %% Version 20170330 (March 2017) v2.2
 %% Version 20170530 (May 2017) v2.3.1
-%% Version 20171229 (December 2017) v2.4
+%% Version 20190104 (January 2019) v2.4
 %% Instituto Superior de Engenharia de Lisboa
 %% Instituto Politécnico de Lisboa
 %%
@@ -32,7 +32,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[
-	msc,			% (*) msc, prepmsc, bsc, prepbsc - degree
+	msc,		% (*) msc, prepmsc, bsc, prepbsc - degree
 					% prepbsc(msc) Preparation of BSc (MSc) dissertation
 					% bsc(msc) BSc graduation report/ MSc dissertation
 					% GO TO LINE 189
@@ -44,25 +44,19 @@
 	hyperref = true,  % Hyperlinks in citations: true(*) false
 	listof=totoc
 	]{thesisisel} 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%  BEGINING OF USER COSTUMIZATION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %====================================================================
 % Additional packages you may want to use (comment those not needed)
 %====================================================================
-
-% Beautiful simple tables
-\usepackage{booktabs}
-
-% Use colors in background of table cells
 %\usepackage{colortbl}
 
 % Sort citations - ONLY if using "plain" style, otherwise keep commented
 %\usepackage[sort]{cite}
-
 
 % The contents of both files (acronyms and glossary) will be merged
 \InputIfFileExists{Chapters/acronyms}{%
@@ -70,6 +64,7 @@
 }{%
 % File glossary.tex is not found, ignore
 }
+
 \InputIfFileExists{Chapters/glossary}{%
 % File glossary.tex exists and is read
 }{%
@@ -80,15 +75,6 @@
 \usepackage[textsize=footnotesize]{todonotes}
 \setlength{\marginparwidth}{1.5cm}
 
-%====================================================================
-% To aggregate multiple figures in a single one with subfigures
-\usepackage{subfigure}
-
-% To have text wrapping figures
-\usepackage{wrapfig}
-\usepackage{float}						% Improves the interface for defining floating objects such as figures and tables
-%
-
 %
 % Define the nomenclature command that prints the symbol/abbreviation and generates a list entry at the same time.
 \newcommand*{\nom}[2]{#1\nomenclature{#1}{#2}}
@@ -96,20 +82,19 @@
 %====================================================================
 % Standard configuration for user included packages
 %====================================================================
+\usepackage{sty/code}
 
 % Where to look for figures
 \graphicspath{{Logo/}{Chapters/img/}} 
-
 % Where to find code scripts files
-\newcommand{\codefiles}[1]{Chapters/scripts/#1}
-% syntax: \lstinputlisting[]{\rfile{name.r}}
+\lstinputpath{Chapters/scripts}
 
 % Where to find Chapters files
 \newcommand{\chapterfiles}[1]{Chapters/#1}
 % syntax: \include{\chapterfiles{name.tex}}
 
 % Force word hyphenation
-\hyphenation{do-cu-ment}
+\hyphenation{}
 
 %====================================================================
 % Some default values that you may whish to override
@@ -125,16 +110,19 @@
 %     for supervisor to inert revision notes and comments.
 % (*)\onehalfspacing
 % \doublespacing
-
-%%============================================================
-
-% Title of the dissertation/thesis
-% USe "\\" to break the title into two or more lines
-
+%
+%		
+%============================================================
 \input{personaldataofthesis}
-%% Title of Report + author(s) + professor + date
-
-
+% Title of Report + author(s) + professor + date
+\hypersetup{ a4paper=true,
+             pdftitle={ \thetitle},
+             pdfauthor={ \theauthor},
+             pdfsubject={ 
+             },
+             pdfkeywords={{ }, { }, { } }
+             }
+             
 %%------------------------------------------------------------
 %% All the names inside braces below sould correspond to a file
 %%     with extension ".tex" and located in the "Chapters" folder
@@ -160,7 +148,7 @@
 \addlisttofrontmatter{\conditionalLoT} 	% The List of Tables. 
 \addlisttofrontmatter{\conditionalLoL}	% The List of Code Listings.
 \addlisttofrontmatter{\printnoidxglossary} % The List if Abreviations / Glossary. Comment to omit.
-
+%\renewcommand{\glossaryname}{Lista de }
 % ---------------------------------------------------------------------------------
 % TEX CHAPTERS:
 % syntax: \chapterfile{file}
@@ -172,20 +160,19 @@
 % sintax: \appendixfile{file}
 \appendixfile{appendix1}
 
-
 %%============================================================
 %%
 %%  END OF USER COSTUMIZATION
 %%
 %%============================================================
 %
-%
 %%============================================================
 %% Please do not change below this point!!! :)
 %%============================================================
 %% Begining of document
 \begin{document}
-
+%\input{template.xmpdata}
+%	\includexmp{template}
 %%------------------------------------------------------------
 %% Before main text
 \frontmatter
@@ -195,6 +182,8 @@
 \Repeat{2}{\frontpage} % insert only 1 for Bachelor report and 2 for Master Thesis
 %\frontpageBSC % comment this line if you write a Master Thesis 
 						   % and uncomment for Bachelor Report
+
+%\InputIfFileExists{\jobname.xmpdata}{}{}
 
 %%------------------------------------------------------------
 %% All the names inside braces below sould correspond to a file
@@ -229,6 +218,8 @@
 %  Print Document Chapters
 % ----------------------------------------------------------------------
 %%
+% Title page: page (i)
+
 \printchapters
 %%
 % ----------------------------------------------------------------------
