--- a/thesisisel.cls
+++ b/thesisisel.cls
@@ -7,7 +7,8 @@
 %%% Version v1.1:  July 2013 
 %%% Version v2.0: March 2015
 %%% Version v2.3: December 2017
-%%%
+%%% Version v2.4: January 2019
+%%% 
 %%% This template is vaguely based on a template from the
 %%%     Universidade Nova de Lisboa (NOT OFFICIAL)
 %%%
@@ -17,20 +18,20 @@
 %%%
 %%% CONTRIBUTERS are welcome. Please contact "mpato@deq.isel.pt"
 %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{thesisisel}[2012/10/09 ISEL thesis template]
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% OPTIONS 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % == Languages ===
-\DeclareOption{pt}{%
+\DeclareOption{pt}{% 		//PORTUGUESE
   \let\@language=0%
   \PassOptionsToPackage{portuguese,english}{babel}}
 
-\DeclareOption{en}{%
+\DeclareOption{en}{%		//ENGLISH
   \let\@language=1%
   \PassOptionsToPackage{portuguese,english}{babel}}
 
@@ -58,8 +59,7 @@
 
 \DeclareOption{12pt}{%
 	\PassOptionsToClass{12pt}{book}}
-
-
+			
 % == Text Encoding ===
 \let\@utf=1
 \DeclareOption{latin1}{\let\@utf=0}
@@ -67,12 +67,12 @@
 
 % == Type of Document ===
 %
-% \@degreetype=0	BSc preliminary report
-% \@degreetype=1	BSc report
-% \@degreetype=2	MSc preliminary report
-% \@degreetype=3	MSc dissertation
+% \@degreetype=0	BSc preliminary report	: prepbsc
+% \@degreetype=1	BSc report							: bsc
+% \@degreetype=2	MSc preliminary report	: prepmsc
+% \@degreetype=3	MSc dissertation				: msc
 %
-
+			
 %\let\@degreetype=4
 \DeclareOption{prepbsc}{
 	\let\@degreetype=0
@@ -102,9 +102,18 @@
 
 \LoadClass{book}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\RequirePackage[
+			breaklinks = true,
+			colorlinks,
+			pdfdisplaydoctitle,
+			citecolor=mydarkblue,
+			linkcolor=black,
+			urlcolor=mydarkblue,
+			pagebackref]{hyperref} 
+			
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% PACKAGES
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Latin1
 \if\@utf0
 \RequirePackage[latin1]{inputenc}
@@ -130,17 +139,22 @@
   \let\idotsint\relax 
 \usepackage{amsmath, amssymb, amsfonts, verbatim, mathabx}
 
-\usepackage{paralist} % Provides the inparaenum environment (with an optional formatting specification in square brackets)
+% underline  
+\usepackage{ulem}
 
+% Provides the inparaenum environment (with an optional formatting specification in square brackets)
+\usepackage{paralist} 
+  
+\newcounter{saveenumi}
+\newcommand{\seti}{\setcounter{saveenumi}{\value{enumi}}}
+\newcommand{\conti}{\setcounter{enumi}{\value{saveenumi}}}
+% Beautiful simple tables
+\usepackage{booktabs}
 \RequirePackage{csquotes}
 \RequirePackage{babel}
-
 \RequirePackage[toc]{appendix}
 
-% \RequirePackage{tabularx}
-
 \RequirePackage{ifthen}
-
 \RequirePackage{titlesec}           % To format the headings
 \RequirePackage{fancyhdr}        % Headings configuration
 
@@ -148,53 +162,86 @@
 \RequirePackage{setspace}           % One-and-half spacing
 \onehalfspacing
 
+%======================================================================
+% General styles
 %\RequirePackage{mathptmx}
 \RequirePackage[scaled]{helvet}
 \RequirePackage{courier}
 \RequirePackage{palatino}
+\usepackage{xmpincl}
+\usepackage[a-1b]{pdfx}
+
+%======================================================================
+
+
 \usepackage{ifpdf}		% This is now the recommended way for checking for PDFLaTeX:
 \ifpdf
 	\RequirePackage[pdftex]{graphicx}
 	\DeclareGraphicsExtensions{.pdf, .png, .jpg, .tif}
 	\RequirePackage[pdftex,usenames,dvipsnames]{color}
 	\definecolor{mydarkblue}{rgb}{0.0,0.08,0.45}
-	\RequirePackage[pdftex,
-		breaklinks = true,
-		colorlinks,
-		pdfdisplaydoctitle,
-		citecolor=mydarkblue,
-		linkcolor=black,
-		urlcolor=mydarkblue,
-		pagebackref]{hyperref} %or, pagebackref
+	
 	\else
 		\RequirePackage{graphicx}
 		\DeclareGraphicsExtensions{.eps, .png, .jpg}
 		\RequirePackage[usenames]{color}
 		\definecolor{mydarkblue}{rgb}{0.0,0.08,0.45}
-		\RequirePackage[
-			breaklinks = true,
-			colorlinks,
-			pdfdisplaydoctitle,
-			citecolor=mydarkblue,
-			linkcolor=black,
-			urlcolor=mydarkblue,
-			pagebackref]{hyperref} %or, pagebackref
+		%or, 
 \fi
 
+ \def\PDF@FinishDoc{%
+  \Hy@UseMaketitleInfos
+  \pdfinfo{
+     /Title(\xmpTitle)%
+     /Author(\xmpAuthor)%
+	 /Creator(\xmpProducer)%
+     \ifx\@pdfcreationdate\@empty
+    \else
+      /CreationDate(\@pdfcreationdate)%
+    \fi
+    \ifx\@pdfmoddate\@empty
+    \else
+      /ModDate(\@pdfmoddate)%
+    \fi
+      /Producer(\xmpProducer)%
+     /Trapped /False
+     /GTS_PDFA1Version (PDF/A-1b:2005)%
+  }%
+  \Hy@EnableOption{pdfauthor}%
+  \Hy@DisableOption{pdftitle}%
+  \Hy@DisableOption{pdfsubject}%
+  \Hy@DisableOption{pdfcreator}%
+  \Hy@DisableOption{pdfcreationdate}%
+  \Hy@DisableOption{pdfmoddate}%
+  \Hy@DisableOption{pdfproducer}%
+  \Hy@DisableOption{pdfkeywords}
+  }
+  
 %====================================================================
 % PACKAGE hyperref
 %====================================================================
 % Set links for references and citations in document
 % Some MiKTeX distributions have faulty PDF creators in which case this package will not work correctly
 % Long live Linux :D
-\hypersetup{ a4paper=true,
-             pdftitle={ },
-             pdfauthor={ },
-             pdfsubject={ },
-             pdfcreator={Matilde P.M. Pato},
-             pdfkeywords={ }
-             }
-%
+%% Title of Report + author(s) + professor + date
+%\hypersetup{ a4paper=true,
+%%             pdftitle={ },
+%%             pdfauthor={ },
+%%             pdfsubject={ },
+% %            pdfcreator={Matilde P.M. Pato},
+% %            pdfkeywords={ }
+%             }
+
+%\RequirePackage[
+%			breaklinks = true,
+%			colorlinks,
+%			pdfdisplaydoctitle,
+%			citecolor=mydarkblue,
+%			linkcolor=black,
+%			urlcolor=mydarkblue,
+%			pagebackref]{hyperref} 
+%		
+	
 \RequirePackage[top=3cm,
 	bottom=3cm,
 	inner=3.5cm,
@@ -246,6 +293,11 @@
 \glsdisablehyper
 \makenoidxglossaries
 
+\setglossarystyle{long} % long3colheader
+% style=long,header=none,border=none,cols=2 &
+\addtolength{\glspagelistwidth}{1cm}
+\addtolength{\glsdescwidth}{2.5cm}
+\renewcommand*{\glsnamefont}[1]{\bfseries #1}%
 %====================================================================
 % PACKAGE pdfpages and pdflscape
 %====================================================================
@@ -253,9 +305,9 @@
 % The pdflscape package adds PDF support to the landscape environment of package lscape, by setting the PDF/Rotate page attribute.
 \usepackage{pdflscape}
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% GENERAL PURPOSE MACROS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  \let\origcleardoublepage=\cleardoublepage
  \def\cleardoublepage{%
    \newpage{\pagestyle{empty}\origcleardoublepage}
@@ -271,38 +323,12 @@
 % For use with the pseudocode package
  \def\@lopcchapterspace{\relax}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% DEFINE LOGO AND IMAGE IN FRONTPAGE
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%% Add ISEL's logo and image in frontpage
-\newcommand{\logo}[2]{
-\parbox[t][0.15\paperheight]{0.1\paperwidth}{%
-\vfill
-\centering
-\includegraphics[scale=#2]{#1}%
-\vfill
-}}
-
-\newcommand{\image}[1]{
-\parbox[t][6cm][c]{12cm}{%
-\vfill
-\centering
-\includegraphics[height=6cm,width=12cm]{#1}%
-\vfill
-}}
-
-\newcommand{\noimage}{
-\parbox[t][6cm][c]{12cm}{%
-}}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% LABELS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %% Some relevant strings
-
 \gdef\@mbachelordegreestr{Licenciado}
 \gdef\@fbachelordegreestr{Licenciada}
 \gdef\@mmastersdegreestr{Mestre}
@@ -356,6 +382,14 @@ de Mestre \\em \@majorfield}
   	\addto{\captionsportuguese}{%
   		\renewcommand{\bibname}{Referências}
   	}
+  	
+  	\def\glossaryname{Main}
+ 		\addto{\captionsportuguese}{
+ 			\renewcommand*{\glossaryname}{Lista de Abreviaturas}
+ 			\renewcommand*{\pagelistname}{Páginas}
+ 			\renewcommand*{\entryname}{Notação}
+	}
+	
   	\renewcommand*{\nomname}{Abreviaturas e símbolos}
  
 	\def\lstlistlistingname{Listagens}
@@ -398,10 +432,33 @@ de Mestre \\em \@majorfield}
 		}
 \fi\fi
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% DEFINE LOGO AND IMAGE IN FRONTPAGE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% ADD ISEL's LOGO and IMAGE in frontpage
+\newcommand{\logo}[2]{
+\parbox[t][0.15\paperheight]{0.1\paperwidth}{%
+\vfill
+\centering
+\includegraphics[scale=#2]{#1}%
+\vfill
+}}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\image}[1]{
+\parbox[t][6cm][c]{12cm}{%
+\vfill
+\centering
+\includegraphics[height=6cm,width=12cm]{#1}%
+\vfill
+}}
+
+\newcommand{\noimage}{
+\parbox[t][6cm][c]{12cm}{%
+}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% CREATING A TITLE PAGE
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  \def\universitylogo#1{%
    \gdef\@universitylogo{#1}}
  \def\@universitylogo{~universitylogo \@notdefined}
@@ -533,8 +590,11 @@ de Mestre \\em \@majorfield}
 	\fi
 }
 
-%% Advisors identification (at most 4 of each)
+% ADVISORS IDENTIFICATION (at most 4 of each)
+%% ---------------------------------------------------%%
 %% \adviser[m|f]{Category}{Name}
+%% ---------------------------------------------------%%
+
 %% where N i a number from 1 to 4
 \def\@theadvisergender{f}	% default for female advisers
 \newcount\@theadvisercount	% number of advisers
@@ -593,8 +653,7 @@ de Mestre \\em \@majorfield}
 	\fi
 	}
 
-%% Work identification
-
+%% WORK IDENTIFICATION
 \def\@
 \def\title#1{%
   \gdef\@title{#1}
@@ -628,9 +687,11 @@ de Mestre \\em \@majorfield}
 \fi\fi\fi\fi}
 
 
-% Jury identification (at most 5 of each)
+% JURY IDENTIFICATION (at most 5 of each)
 %% [p] for president and [a] for referees 
+%% ---------------------------------------------------%%
 %% \jury[p|a]{Category and Name}
+%% ---------------------------------------------------%%
 %% where N i a number from 1 to 5
 \newcount\@thejurypcount	% number of presidents (must be one)
 \@thejurypcount 0\relax
@@ -719,21 +780,21 @@ de Mestre \\em \@majorfield}
 	}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% PAGE LAYOUT
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \synctex=1 % Uase synctex
 \brokenpenalty=10000
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Fonts
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand\quotefont{\normalfont\normalsize}
 \newcommand\quotefonti{\it\normalsize}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Including chapters and similars
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\newcommand{\reverseconcat}[3]{#3#2#1}
 \newcommand{\version}[1]{ 
 	\if\@language0
@@ -884,6 +945,7 @@ de Mestre \\em \@majorfield}
 % To process lists and other stuff
 \RequirePackage{etoolbox}
 %\usepackage{pgffor}%
+
 %====================================================================
 % PACKAGE listings
 %====================================================================
@@ -897,31 +959,39 @@ de Mestre \\em \@majorfield}
 %
 %====================================================================
 
-%\usepackage{fancyvrb}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Conditional list of figure, table, listings - listoffigures, listoftables and lstlistoflistings only if listings are present
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \usepackage{listings}
+%listings package provides a key called inputpath for specifying a path where \lstinputlisting should search for source files.
+\newcommand*\lstinputpath[1]{\lstset{inputpath=#1}}
 
 \renewcommand{\lstlistoflistings}{
 	\begingroup
 	\tocfile{\lstlistlistingname}{lol}
 	\endgroup}
-\usepackage[figure,table,lstlisting]{totalcount}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Conditional list of figure, table, listings - listoffigures, listoftables and lstlistoflistings only if listings are present
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% To aggregate multiple figures in a single one with subfigures
+\usepackage{subfigure}
+
+% To have text wrapping figures
+\usepackage{wrapfig}
+\usepackage{float}						% Improves the interface for defining floating objects such as figures and tables
+%
+%====================================================================
+ \usepackage[figure,table,lstlisting]{totalcount}
 
 \newcommand\conditionalLoF{%
   \iftotalfigures\listoffigures\fi}
 \newcommand\conditionalLoT{%
   \iftotaltables\listoftables\fi}
 \newcommand\conditionalLoL{%
-  \iftotallstlistings\lstlistoflistings\fi}  
+  \iftotallstlistings\lstlistoflistings\fi}   
   
-  
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Deal with optional lists in the frontmatter: listoftables, listoffigures, etc.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \def\@printlist#1{ %
 		#1\cleardoublepage
 }
@@ -935,10 +1005,9 @@ de Mestre \\em \@majorfield}
 		\forlistloop{\@printlist}{\@frontmatter@list} %
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Frontpage
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% FRONTPAGE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \def\frontpage{
 
 \thispagestyle{empty}
@@ -974,6 +1043,7 @@ de Mestre \\em \@majorfield}
 	\fontsize{18}{21.6}
 	\selectfont
 	\textbf{\@title}\\[0.75cm]
+
 
 \vspace{0.2cm}	
 % Name of Candidate
@@ -1041,9 +1111,9 @@ de Mestre \\em \@majorfield}
 \thispagestyle{empty}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Frontpage - Bachelor Project
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \def\frontpageBSC{
 
@@ -1121,9 +1191,9 @@ de Mestre \\em \@majorfield}
 \thispagestyle{empty}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Dedicatory
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \def\dedicatory{ %
 	\if @openright\cleardoublepage\else\clearpage\fi
 	\thispagestyle{empty}
@@ -1139,9 +1209,9 @@ de Mestre \\em \@majorfield}
 	\end{flushright}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Quote
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \def\quote{%
 	\if@openright\cleardoublepage\else\clearpage\fi
 	\thispagestyle{empty}
@@ -1157,53 +1227,53 @@ de Mestre \\em \@majorfield}
 	\end{flushright}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Acknowledgements
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \def\acknowledgements{%
   \chapter*{\acknowledgementsname}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Resumo
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\def\abstractPT{%
-  \selectlanguage{portuguese}
-  \gdef\@keywordsname{\@keywordsnamePT}
-  \chapter*{\@abstrnamePT}
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Abstract
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \def\abstractEN{%
   \selectlanguage{english}
   \gdef\@keywordsname{\@keywordsnameEN}
   \chapter*{\@abstrnameEN}
 }
   
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Resumo (Abstract in Portuguese)
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\def\abstractPT{%
+  \selectlanguage{portuguese}
+  \gdef\@keywordsname{\@keywordsnamePT}
+  \chapter*{\@abstrnamePT}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Keywords
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \def\@keywordsname{\@defaultkeywordsname}
 \def\keywords{%
   \par\vskip\baselineskip\noindent{\bf\@keywordsname: }}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Chapter files
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand*{\MaxNumOfChapters}{10}% Adjust these two settings for your needs.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Table of contents
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \setcounter{tocdepth}{2}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Sectioning
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \setcounter{secnumdepth}{3}
 
@@ -1219,14 +1289,15 @@ de Mestre \\em \@majorfield}
 ]
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Headers & footers
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Bibliography
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %http://tex.stackexchange.com/questions/15971/bibliography-with-page-numbers
+\usepackage{backref}
 \renewcommand*{\backref}[1]{}
 \renewcommand*{\backrefalt}[4]{%
     \ifcase #1 (not cited)%
@@ -1238,151 +1309,3 @@ de Mestre \\em \@majorfield}
 %URL linebreak in footnote
 \usepackage{breakurl}
 \def\UrlBreaks{\do\/\do-}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Common listing def: R and Java example
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% == Color Definitions ===
-\definecolor{olivegreen}    {cmyk}{0.64, 0 , 0.95, 0.40}
-\definecolor{dkgreen}{rgb}{0,0.6,0}	
-\definecolor{midnightblue}  {cmyk}{0.98, 0.13, 0 , 0.43}
-%%    
-\lstset{
-literate=%
-% Latin
-  {á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1
-  {Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1
-  {à}{{\`a}}1 {è}{{\`e}}1 {ì}{{\`i}}1 {ò}{{\`o}}1 {ù}{{\`u}}1
-  {À}{{\`A}}1 {È}{{\'E}}1 {Ì}{{\`I}}1 {Ò}{{\`O}}1 {Ù}{{\`U}}1
-  {ä}{{\"a}}1 {ë}{{\"e}}1 {ï}{{\"i}}1 {ö}{{\"o}}1 {ü}{{\"u}}1
-  {Ä}{{\"A}}1 {Ë}{{\"E}}1 {Ï}{{\"I}}1 {Ö}{{\"O}}1 {Ü}{{\"U}}1
-  {â}{{\^a}}1 {ê}{{\^e}}1 {î}{{\^i}}1 {ô}{{\^o}}1 {û}{{\^u}}1
-  {Â}{{\^A}}1 {Ê}{{\^E}}1 {Î}{{\^I}}1 {Ô}{{\^O}}1 {Û}{{\^U}}1
-  {œ}{{\oe}}1 {Œ}{{\OE}}1 {æ}{{\ae}}1 {Æ}{{\AE}}1 {ß}{{\ss}}1
-  {ű}{{\H{u}}}1 {Ű}{{\H{U}}}1 {ő}{{\H{o}}}1 {Ő}{{\H{O}}}1
-  {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
-  {€}{{\euro}}1 {£}{{\pounds}}1 {«}{{\guillemotleft}}1
-  {»}{{\guillemotright}}1 {ñ}{{\~n}}1 {Ñ}{{\~N}}1 {¿}{{?`}}1
-}  
-%% R     
-\lstset{ 
-	language = R, 					% the language of the code
-	basicstyle = \scriptsize\ttfamily,  % the size of the fonts that are used for the code
-	commentstyle = \ttfamily\color{dkgreen}, % comment style
-    numbers = left,     % where to put the line-numbers; possible values are (none, left, right)
-   	numberstyle = \ttfamily\color{gray}, 
-	stepnumber = 2,  % the step between two line-numbers. If it's 1, each line will be numbered
-    numbersep = 5pt, 				% how far the line-numbers are from the code	
-    xleftmargin = \parindent,
-    backgroundcolor = \color{white},  % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
-	showspaces = false,   % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
-  	showstringspaces = false,  % underline spaces within strings only
-  	showtabs = false,               % show tabs within strings adding particular underscores
-	stringstyle = \ttfamily, 		 % typewriter type for strings
-	frame = single, 					 % adds a frame around the code
-	rulesepcolor = \color{black},
-	columns = fullflexible,
-   	tabsize = 2,                       % sets default tabsize to 2 spaces
-   	captionpos = b, 				% sets the caption-position to bottom
-	breakatwhitespace = false,% sets if automatic breaks should only happen at whitespace
-  	breaklines = true,              % sets automatic line breaking
-   	title = \lstname                 % show the filename of files included with \lstinputlisting; also try caption instead of title
-    escapeinside = {},         		% if you want to add LaTeX within your code
-    keywordstyle = \ttfamily\color{midnightblue}\itshape, % keyword style
-	morekeywords = {},
-	inputencoding=latin1 
-	}	
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Common listing def - JAVA
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% Listings
-%\usepackage{fancyvrb}
-\colorlet{lstKeywordsColor}{MidnightBlue}
-\colorlet{lstKeywordsAltColor}{BrickRed}
-\colorlet{lstCommentsColor}{ForestGreen}
-\colorlet{lstStringColor}{BrickRed}
-% Usage: \begin{javalst}[Caption]{Label}
-\lstnewenvironment{javalst}[2][]%
-{
-\lstset{
-	language = java,
-	basicstyle = \small\tt,
-	frame = tb,
-	captionpos = b,
-	caption = #1,
-	label = {lst:#2},
-	tabsize = 2}}%
-{}%
-
-\lstnewenvironment{xmllst}[2][]%
-{
-\lstset{
-	language = XML,
-	basicstyle = \small\tt,
-	frame = tb,
-	captionpos = b,
-	caption = #1,
-	label = {lst:#2},
-	tabsize = 2}}%
-{}%
-\lstnewenvironment{lst}[2][]%
-{
-\lstset{
-	basicstyle = \footnotesize\tt,
-	frame = tb,
-	captionpos = b,
-	caption = #1,
-	label = {lst:#2},
-	tabsize = 2}}%
-{}%
-
-% For inline code
-\newcommand{\codejava}[1]{
-	\lstinline[
-		basicstyle = \tt,%
-		keywordstyle = \color{lstKeywordsColor}\bfseries,%
-		commentstyle = \color{lstCommentsColor},%
-		stringstyle = \color{lstStringColor},% 		
-		language = Java]|#1|}
-
-%for code in file
-% usage \lstfromfile{language}{caption}{label}{path}
-\newcommand{\lstfromfile}[5]{				
-	\lstinputlisting[language=#1,
-	   basicstyle = \small\tt,
-		frame = tb,
-		captionpos = b,
-		commentstyle = \color{lstCommentsColor},
-		stringstyle = \color{lstStringColor},
-		keywordstyle = \color{lstKeywordsColor}\bfseries,
-		caption = #2,
-		label = {#3},
-		tabsize = 2,#5]{#4}
-}
-
-%define java language
-\lstset{ %
-	language = java,            % choose the language of the code
-	basicstyle = \footnotesize\ttfamily,       % the size of the fonts that are used for the code
-	numbers = left,              % where to put the line-numbers
-	numberstyle = \tiny,      % the size of the fonts that are used for the line-numbers
-	stepnumber = 1,            % the step between two line-numbers. If it is 1 each line will be 		numbered
-	numbersep = 5pt,          % how far the line-numbers are from the code
-	backgroundcolor = \color{white},  % choose the background color. You must add 		\usepackage{color}
-	showspaces = false,       % show spaces adding particular underscores
-	showstringspaces = false,      % underline spaces within strings
-	showtabs = false,           % show tabs within strings adding particular underscores
-	frame = single,              % adds a frame around the code
-	tabsize = 2,                   % sets default tabsize to 2 spaces
-	captionpos = b,             % sets the caption-position to bottom
-	breaklines = true,          % sets automatic line breaking
-	breakatwhitespace = false,    % sets if automatic breaks should only happen at whitespace
-	escapeinside = {\%*}{*)},          % if you want to add a comment within your code
-	stringstyle = \color{lstStringColor},
-	keywordstyle = \color{lstKeywordsColor}\bfseries,
-	commentstyle = \color{lstCommentsColor}\itshape,
-}
